# very_simple_2d_engine

./: .gitignore  CMakeLists.txt  Core.cpp  Core.h  Exception.cpp  Exception.h  GameObject.cpp  GameObject.h  InputProcessor.cpp  InputProcessor.h  Key.h  Module.h  PhysicsProcessor.cpp  README.md  SDLEventsProcessor.cpp  SDLWindow.cpp  SDLWindow.h  SceneExample.cpp  SceneExample.h  SceneRenderer.cpp  SceneRenderer.h  Vector.h  main.cpp
examples/test/: main.cpp
examples/tetris/: CMakeLists.txt
examples/tetris/src/: GameLogic.cpp  GameLogic.h  GameLogic.h.orig  TetrisScene.cpp  TetrisScene.h  Tetromino.cpp  Tetromino.h  globals.h  main.cpp
src/: CollisionsProcessor.hpp  Core.cpp  Core.h  EventsProcessor.cpp  EventsProcessor.h  Exception.h  GameObject.cpp  GameObject.h  GameObject.hpp  InputProcessor.cpp  InputProcessor.h  Module.cpp  Module.h  MovableGameObject.hpp  PhysicsGameObject.hpp  PhysicsProcessor.h  PhysicsProcessor.hpp  SDLEventsProcessor.h  SDLWindow.cpp  SDLWindow.h  Scene.cpp  Scene.h  Scene.hpp  Scene2Map.hpp  Scene2Renderer.hpp  SceneExample.cpp  SceneExample.h  SceneMap.hpp  SceneRenderer.cpp  SceneRenderer.h  Timer.cpp  Timer.h  TimersProcessor.cpp  TimersProcessor.h  main.cpp
src/game_math/: Matrix.hpp  Vector.hpp  game_math.h
tests/: main.cpp
